--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
 }
 
 dependencies {
+    implementation 'org.mongodb:stitch:3.0.0'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
